# semantic_scholar_scraper

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
semantic_scholar_scraper/cli/: async_command.py  cli.py
semantic_scholar_scraper/client/: errors.py  models.py  paper_resource.py  semantic_scholar_client.py
