[tool.poetry]
name = "semantic-scholar-scraper"
version = "0.1.0"
description = ""
authors = ["Guilherme Nunes <guilherme_nunes@apple.com>"]
readme = "README.md"
packages = [{include = "semantic_scholar_scraper"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
httpx = "^0.23.3"
beautifulsoup4 = "^4.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sem_scraper = "semantic_scholar_scraper.cli.cli:cli"

